[tool.poetry]
name = "stargazeutils"
version = "0.1.0"
description = ""
authors = ["Starship IBC <shrugs.rest0x@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
requests-cache = "^0.9.3"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.1"
isort = "^5.10.1"
black = "^22.3.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
