[tool.poetry]
name = "stargazeutils"
version = "0.2.0"
description = ""
authors = ["Starship IBC <shrugs.rest0x@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
requests-cache = "^0.9.3"
py-cid = "^0.3.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.1"
isort = "^5.10.1"
black = "^22.3.0"
requests-mock = "^1.9.3"
pytest-cov = "^3.0.0"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--cov=stargazeutils --cov-report html"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
